--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,7 @@ nav a {
   border-radius: 4px;
   border: 1px solid #e8e8e8;
   padding: 2rem;
+  margin-bottom: 2.5rem;
 }
 
 .book-category {
@@ -108,6 +109,7 @@ nav a {
 
 .book-button:nth-child(2) {
   margin: 0 0.5rem;
+  cursor: pointer;
   padding: 0.3rem 0.5rem;
   border-left: 2px solid #e8e8e8;
   border-right: 2px solid #e8e8e8;
@@ -202,4 +204,74 @@ nav a {
   color: #fff;
   text-transform: uppercase;
   width: 80%;
+}
+
+.update-progress-button:hover {
+  background-color: #0380e0;
+}
+
+.update-progress-button:active {
+  background-color: #036bbb;
+}
+
+.form-container {
+  padding-top: 1.813rem;
+  border-top: 0.125rem solid #e8e8e8;
+}
+
+.add-book-title {
+  font-size: 1.25rem;
+  font-weight: 700;
+  letter-spacing: -.18px;
+  color: #888;
+  margin: 0;
+}
+
+form {
+  margin-top: 20px;
+  display: flex;
+  grid-gap: 32px;
+  gap: 32px;
+}
+
+.add-book-input {
+  appearance: none;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.375rem;
+  color: #212529;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  width: 25%;
+}
+
+.add-book-input:focus {
+  outline: none;
+  border: 1px solid #0290ff;
+}
+
+.submit-btn {
+  cursor: pointer;
+  width: 25%;
+  padding: 12px;
+  border-radius: 3px;
+  background-color: #0290ff;
+  border: none;
+  letter-spacing: .5px;
+  color: #fff;
+  font-size: .813rem;
+  font-weight: 700;
+  font-family: "Roboto Slab",serif;
+  text-transform: uppercase;
+}
+
+.submit-btn:hover {
+  background-color: #0380e0;
+}
+
+.submit-btn:active {
+  background-color: #036bbb;
 }
