--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   box-sizing: border-box;
   padding: 4%;
   margin: 0;
-  font-family: "Montserrat",sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #f3f4f8;
 }
 
@@ -26,7 +26,7 @@ nav {
 }
 
 nav a {
-  text-decoration: none ;
+  text-decoration: none;
   display: flex;
   align-items: center;
 }
@@ -49,7 +49,7 @@ nav a {
 }
 
 .nav-link {
-  font-size: .813rem;
+  font-size: 0.813rem;
   color: #12121250;
   letter-spacing: 1.9px;
   text-transform: uppercase;
@@ -80,25 +80,25 @@ nav a {
 
 .book-category {
   margin: 0;
-  font-size: .875rem;
+  font-size: 0.875rem;
   color: #888;
 }
 
 .book-name {
   margin: 0.188rem 0;
   font-size: 1.375rem;
-  letter-spacing: -.2px;
-  font-family: "Roboto Slab",serif;
+  letter-spacing: -0.2px;
+  font-family: "Roboto Slab", serif;
   font-weight: 700;
   color: #121212;
 }
 
 .book-author {
-  font-size: .875rem;
+  font-size: 0.875rem;
   font-weight: 300;
   color: #4386bf;
   margin: 0;
-  font-family: "Roboto Slab",serif;
+  font-family: "Roboto Slab", serif;
 }
 
 .book-buttons-container {
@@ -107,21 +107,21 @@ nav a {
   margin-top: 1.313rem;
 }
 
+.book-button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  color: #4386bf;
+  font-size: 0.875rem;
+  font-weight: 300;
+}
+
 .book-button:nth-child(2) {
   margin: 0 0.5rem;
   cursor: pointer;
   padding: 0.3rem 0.5rem;
   border-left: 2px solid #e8e8e8;
   border-right: 2px solid #e8e8e8;
-}
-
-.book-button {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  color: #4386bf;
-  font-size: .875rem;
-  font-weight: 300; 
 }
 
 .progress-container {
@@ -148,7 +148,7 @@ nav a {
 }
 
 .complete-precent {
-  font-family: "Montserrat",sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #121212;
   font-size: 2rem;
   margin: 0;
@@ -156,7 +156,7 @@ nav a {
 }
 
 .completed {
-  font-size: .875rem;
+  font-size: 0.875rem;
   color: #12121250;
   margin: 0;
 }
@@ -175,7 +175,7 @@ nav a {
 }
 
 .current-chapter {
-  font-family: "Roboto Slab",serif;
+  font-family: "Roboto Slab", serif;
   font-weight: 300;
   color: #12121250;
   font-size: 0.875rem;
@@ -186,8 +186,8 @@ nav a {
   margin-top: 0.438rem;
   margin-bottom: 20px;
   font-size: 1rem;
-  letter-spacing: -.4px;
-  font-family: "Roboto Slab",serif;
+  letter-spacing: -0.4px;
+  font-family: "Roboto Slab", serif;
   font-weight: 300;
   color: #121212;
 }
@@ -198,9 +198,9 @@ nav a {
   background-color: #0290ff;
   border-radius: 3px;
   padding: 8px 24px;
-  font-family: "Roboto Slab",serif;
+  font-family: "Roboto Slab", serif;
   font-weight: 300;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   color: #fff;
   text-transform: uppercase;
   width: 80%;
@@ -222,7 +222,7 @@ nav a {
 .add-book-title {
   font-size: 1.25rem;
   font-weight: 700;
-  letter-spacing: -.18px;
+  letter-spacing: -0.18px;
   color: #888;
   margin: 0;
 }
@@ -244,7 +244,7 @@ form {
   font-weight: 400;
   line-height: 1.5;
   padding: 0.375rem 0.75rem;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   width: 25%;
 }
 
@@ -260,11 +260,11 @@ form {
   border-radius: 3px;
   background-color: #0290ff;
   border: none;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   color: #fff;
-  font-size: .813rem;
+  font-size: 0.813rem;
   font-weight: 700;
-  font-family: "Roboto Slab",serif;
+  font-family: "Roboto Slab", serif;
   text-transform: uppercase;
 }
 
