--- a/src/index.css
+++ b/src/index.css
@@ -13,22 +13,34 @@ body {
   background-color: #feffff;
 }
 
-header {
+.d-flex {
   display: flex;
+}
+
+.blue-txt {
+  color: #4386bf;
+}
+
+.dark-gret-txt {
+  color: #12121250;
+}
+
+.project-main-txt-color {
+  color: #121212;
+}
+
+header {
   padding: 24px 4%;
   justify-content: space-between;
   border-bottom: 1px solid #e8e8e8;
 }
 
 nav {
-  display: flex;
   gap: 40px;
 }
 
 nav a {
   text-decoration: none;
-  display: flex;
-  align-items: center;
 }
 
 .header-title {
@@ -42,7 +54,6 @@ nav a {
   padding: 0;
   list-style: none;
   margin: 0;
-  display: flex;
   gap: 40px;
   justify-content: center;
   align-items: center;
@@ -50,13 +61,8 @@ nav a {
 
 .nav-link {
   font-size: 0.813rem;
-  color: #12121250;
   letter-spacing: 1.9px;
   text-transform: uppercase;
-}
-
-.active {
-  color: #121212;
 }
 
 .app-container {
@@ -69,7 +75,6 @@ nav a {
 }
 
 .book-container {
-  display: flex;
   justify-content: space-between;
   background-color: #fff;
   border-radius: 4px;
@@ -90,19 +95,16 @@ nav a {
   letter-spacing: -0.2px;
   font-family: "Roboto Slab", serif;
   font-weight: 700;
-  color: #121212;
 }
 
 .book-author {
   font-size: 0.875rem;
   font-weight: 300;
-  color: #4386bf;
   margin: 0;
   font-family: "Roboto Slab", serif;
 }
 
 .book-buttons-container {
-  display: flex;
   align-items: center;
   margin-top: 1.313rem;
 }
@@ -111,7 +113,6 @@ nav a {
   background-color: transparent;
   border: none;
   padding: 0;
-  color: #4386bf;
   font-size: 0.875rem;
   font-weight: 300;
 }
@@ -125,7 +126,6 @@ nav a {
 }
 
 .progress-container {
-  display: flex;
   align-items: center;
 }
 
@@ -133,7 +133,6 @@ nav a {
   width: 5.625rem;
   height: 5.625rem;
   padding: 0.63rem 0.625rem 0.75rem 0.75rem;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -149,7 +148,6 @@ nav a {
 
 .complete-precent {
   font-family: "Montserrat", sans-serif;
-  color: #121212;
   font-size: 2rem;
   margin: 0;
   padding: 0;
@@ -157,7 +155,6 @@ nav a {
 
 .completed {
   font-size: 0.875rem;
-  color: #12121250;
   margin: 0;
 }
 
@@ -169,7 +166,6 @@ nav a {
 }
 
 .chapter-container {
-  display: flex;
   flex-direction: column;
   width: 14rem;
 }
@@ -177,7 +173,6 @@ nav a {
 .current-chapter {
   font-family: "Roboto Slab", serif;
   font-weight: 300;
-  color: #12121250;
   font-size: 0.875rem;
   text-transform: uppercase;
 }
@@ -189,7 +184,6 @@ nav a {
   letter-spacing: -0.4px;
   font-family: "Roboto Slab", serif;
   font-weight: 300;
-  color: #121212;
 }
 
 .update-progress-button {
@@ -229,7 +223,6 @@ nav a {
 
 form {
   margin-top: 20px;
-  display: flex;
   grid-gap: 32px;
   gap: 32px;
 }
